--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
     "require": {
         "php": "^7.3|^8.0",
         "dusterio/lumen-passport": "^0.3.6",
-        "laravel/lumen-framework": "^8.3.1"
+        "laravel/lumen-framework": "^8.3.1",
+        "orumad/lumen-config-cache": "^1.1"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
